# chessboard

./: Agents.md  Makefile  index.html
docs/: ARCHITECTURE.md  xiangqiai-feature-analysis.md  xiangqiai.com-web-implementation.md
libs/pikafish/: pikafish-macos
memory-bank/: architecture.md  implementation-plan.md  prd.md  progress.md  tech-stack.md
public/vschess/vschess/: vschess.function.js  vschess.js  vschess.js.php  vschess.min.js  vschess.node.js.php
public/vschess/vschess/develop/module/: function.binaryToInfo.js  function.binaryToNode.js  function.dataToInfo.js  function.dataToNode.js  function.moveToNode.js  main.dom.js  module.copy.js  module.edit.js
public/vschess/vschess/style/fc/: style.css
restruct/: Cargo.toml
restruct/crates/xq-app/: Cargo.toml
restruct/crates/xq-app/src/: app.rs  main.rs  resources.rs
restruct/crates/xq-core/: Cargo.toml
restruct/crates/xq-core/src/: diff.rs  fen.rs  flip.rs  legality.rs  lib.rs  types.rs
restruct/crates/xq-engine/: Cargo.toml
restruct/crates/xq-engine/src/: adapter.rs  chessdb.rs  lib.rs  parser.rs  process.rs  profile.rs  protocol.rs  ucci.rs  uci.rs
restruct/crates/xq-link/: Cargo.toml
restruct/crates/xq-link/src/: geometry.rs  inject.rs  lib.rs  permission.rs  runtime.rs  sync.rs  window.rs
restruct/crates/xq-vision/: Cargo.toml
restruct/crates/xq-vision/src/: crop.rs  detect.rs  input.rs  lib.rs  model.rs  pipeline.rs  postprocess.rs  stability.rs
server/: tauri.conf.json
server/src/: chess.rs  worker.rs
server/src/engine/: mod.rs
src/: App.vue
src/components/: Analyse.vue  Chessboard.vue
