[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "MIT"
authors = ["chessboard developers"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
ndarray = "0.16"
xcap = { version = "0.5.1" }
enigo = "0.1.3"
