[package]
name = "xq-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "Iced application entrypoint skeleton for the Xiangqi assistant."

[features]
default = []
rotate = []
gpu = []

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
iced.workspace = true

xq-core = { path = "../xq-core" }
xq-vision = { path = "../xq-vision" }
xq-engine = { path = "../xq-engine" }
xq-link = { path = "../xq-link" }
