[package]
name = "xq-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "Core domain types and rules for the Xiangqi assistant."

[lib]
path = "src/lib.rs"

[features]
default = []
rotate = []
gpu = []

[dependencies]
thiserror.workspace = true
