[package]
name = "xq-engine"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "Engine integration skeleton for the Xiangqi assistant."

[lib]
path = "src/lib.rs"

[features]
default = []
rotate = []
gpu = []

[dependencies]
xq-core = { path = "../xq-core" }
anyhow.workspace = true
tracing.workspace = true
